other-example/pod-2-nginx-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:   # 容器nginx挂载Volume
    - name: data
      mountPath: /data
  - image: busybox
    name: busybox
    command: ["/bin/sh","-c","sleep 3600"]
    volumeMounts:   # 容器busybox挂载Volume
    - name: data
      mountPath: /data
  volumes:          # 定义了一个临时Volume
  - name: data
    emptyDir: {}
