other-example/pod-cm-secret.yaml

apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: busybox-c
    image: busybox   # busybox是一个linux工具包        
    command: ["/bin/sleep", "3600"] 
    volumeMounts:
    - name: info
      mountPath: /data/info # 要挂载的本地目录
    - name: user
      mountPath: /data/user # 要挂载的本地目录
  volumes:
  - name: info
    configMap:
      name: info
  - name: user
    secret:
      secretName: user
