other-example/pod-nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-high
spec:
  nodeSelector:
    hardware: high  # 这里是你的节点标签
  containers:
  - name: my-container
    image: nginx
