other-example/t0-nginx-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tmp-pod
spec:
  containers:
  - image: nginx
    name: nginx
  - image: busybox
    name: busybox
    command: ["/bin/sh","-c","sleep 3600"]
