other-example/t9-np-pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns1
  labels:
    ns: ns1

---
apiVersion: v1
kind: Namespace
metadata:
  name: ns2
  labels:
    ns: ns2
---
apiVersion: v1
kind: Pod
metadata:
  name: ns1-nginx-pod
  namespace: ns1
  labels:
    app: back
spec:
  containers:
  - name: nginx-co
    image: nginx
  nodeSelector:
    kubernetes.io/hostname: k8s-worker1
---
apiVersion: v1
kind: Pod
metadata:
  name: ns1-busybox-pod
  namespace: ns1
spec:
  containers:
  - name: busybox-co
    image: busybox
    command: ["/bin/sh","-c","sleep 3600"]
  nodeSelector:
    kubernetes.io/hostname: k8s-worker1
---
apiVersion: v1
kind: Pod
metadata:
  name: ns2-busybox-pod-front
  namespace: ns2
  labels:
    app: front
spec:
  containers:
  - name: busybox-co
    image: busybox
    command: ["/bin/sh","-c","sleep 3600"]
  nodeSelector:
    kubernetes.io/hostname: k8s-worker1
---
apiVersion: v1
kind: Pod
metadata:
  name: ns2-busybox-pod
  namespace: ns2
spec:
  containers:
  - name: busybox-co
    image: busybox
    command: ["/bin/sh","-c","sleep 3600"]
  nodeSelector:
    kubernetes.io/hostname: k8s-worker1
