other-example/t6-ingress-dep-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: nginx
#  tls:
#  - hosts:
#    - myapp.address.com
#    secretName: myapp-address-com-secret
  rules:
  - host: myapp.address.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
