other-example/t9-np-allow-ns2-front.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-ns2-front
  namespace: ns1
spec:
  podSelector: 
    matchLabels:
      app: back
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: ns2
      podSelector:
        matchLabels:
          app: front
