other-example/t9-np-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-deny-all
  namespace: ns1
spec:
  podSelector: {}    # 命名空间下所有Pod
  policyTypes:
  - Ingress
