other-example/t9-np-deny-other-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-deny-other-ns
  namespace: ns1
spec:
  podSelector: {}    # 命名空间下所有Pod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {} # 命名空间下所有Pod
